--- a/src/@lekoarts/gatsby-theme-cara/sections/projects.mdx
+++ b/src/@lekoarts/gatsby-theme-cara/sections/projects.mdx
@@ -1,32 +1,31 @@
 ## Projects
 
 <ProjectCard
-  title="Tips & Tricks for Gatsby"
-  link="https://www.lekoarts.de/gatsby/tips-and-tricks-for-gatsby?utm_source=cara&utm_medium=Theme"
+  title="Random Joke Generator"
+  link="https://jokejax.netlify.app/"
   bg="linear-gradient(to right, #D4145A 0%, #FBB03B 100%)"
 >
-  A collection of short, but useful quick tips shared by me and the community
-  about Gatsby. From GraphQL over local development to deployment.
+  This is a random joke generator app build with reactjs. Input any categories listed on app to generate random jokes and have fun.
 </ProjectCard>
 <ProjectCard
-  title="Setting  up a yarn Workspace"
-  link="https://www.lekoarts.de/javascript/setting-up-a-yarn-workspace-with-typescript-eslint-and-cypress?utm_source=cara&utm_medium=Theme"
+  title="LinkedIn Clone"
+  link="https://linkedin-clone-ed00a.web.app/"
   bg="linear-gradient(to right, #662D8C 0%, #ED1E79 100%)"
 >
-  A robust solution for multi-package repositories.
+  This is a LinkedIn Clone built with ReactJs, Redux and Firebase Cloud Firestore with the functionality
+  of user authentication and Adding LinkedIn posts.
 </ProjectCard>
 <ProjectCard
-  title="Adding a Draft Feature to Gatsby"
-  link="https://www.lekoarts.de/garden/adding-a-draft-feature-to-gatsby?utm_source=cara&utm_medium=Theme"
+  title="Speak Na'vi Translator App"
+  link="https://speak-navi.netlify.app/"
   bg="linear-gradient(to right, #009245 0%, #FCEE21 100%)"
 >
-  A solution with the createSchemaCustomization API.
+  Convert from English to Navi. Na'vi is a constructed language spoken by the Na'vi people in the fictional world Pandora.
 </ProjectCard>
 <ProjectCard
-  title="Theme UI Plugin for Figma"
-  link="https://www.lekoarts.de/design/introducing-the-theme-ui-plugin-for-figma?utm_source=cara&utm_medium=Theme"
+  title="A Fun Marvel Quiz CLI Game"
+  link="https://replit.com/@imanas96/fun-marvel-quiz-game?embed=true"
   bg="linear-gradient(to right, #D585FF 0%, #00FFEE 100%)"
 >
-  The Theme UI plugin for Figma allows for a workflow where Theme UI is the
-  starting point both for design & development.
+  Are you a marvel fan? Let's play a quiz and see. 
 </ProjectCard>
