--- a/src/@lekoarts/gatsby-theme-cara/sections/about.mdx
+++ b/src/@lekoarts/gatsby-theme-cara/sections/about.mdx
@@ -1,5 +1,6 @@
 ## About
 
-> The English language can not fully capture the depth and complexity of my thoughts. So I'm incorporating Emoji into my speech to better express myself. Winky face.
+> I'm Manas Ranjan Adha, a undergrad from IIIT Allahabad in India with Bachelors of Technology in Information Technology. I am a Front-End Web developer with hands on experience building Web App with ReactJS. I have strong understanding of HTML, CSS and JavaScript fundamentals.
+I am also proficient in Data Structures and Algorithms. 
 
-You know the way you feel when you see a picture of two otters holding hands? That's how you're gonna feel every day. My mother cried the day I was born because she knew she’d never be prettier than me. You should make me your campaign manager. I was born for politics. I have great hair and I love lying. Captain? The kids want to know where Paulie the Pigeon is. I told them he got sucked up into an airplane engine, is that all right?
+I am currently in early stages of building backend with mySQL and MongoDB and Learning TypeScript.
