--- a/src/@lekoarts/gatsby-theme-cara/sections/intro.mdx
+++ b/src/@lekoarts/gatsby-theme-cara/sections/intro.mdx
@@ -1,3 +1,4 @@
-# Hi, I'm Your Name
+# Hi, There!   
+## I'm Manas Ranjan Adha
 
-Template by [lekoarts.de](https://www.lekoarts.de?utm_source=cara&utm_medium=Starter) - I write about JavaScript and React there!
+and I'm a <span style={{fontWeight: 'bold', color: '#805AD2'}}>Web Developer!</span>
