--- a/src/@lekoarts/gatsby-theme-cara/sections/contact.mdx
+++ b/src/@lekoarts/gatsby-theme-cara/sections/contact.mdx
@@ -1,3 +1,3 @@
 ## Get in touch
 
-You can contact me at [manas865873@gmail.com](mailto:manas865873@gmail.com) or find me on other platforms: [GitHub](https://github.com/codewithmanas), [Twitter](https://twitter.com/holaaa_manas/) & [LinkedIn](www.linkedin.com/in/holaaa-manas)
+You can contact me at [manas865873@gmail.com](mailto:manas865873@gmail.com) or find me on other platforms: [GitHub](https://github.com/codewithmanas), [Twitter](https://twitter.com/holaaa_manas/) & [LinkedIn](https://linkedin.com/in/holaaa-manas)
