--- a/src/@lekoarts/gatsby-theme-cara/sections/about.mdx
+++ b/src/@lekoarts/gatsby-theme-cara/sections/about.mdx
@@ -4,3 +4,5 @@
 I am also proficient in Data Structures and Algorithms. 
 
 I am currently in early stages of building backend with mySQL and MongoDB and Learning TypeScript.
+
+You can find my resume here: [Resume](https://drive.google.com/file/d/129_1pGyIAJEzQP24V6gCOAmGd9ko65jO/view?usp=sharing)
